--- a/templates/view_climb.html
+++ b/templates/view_climb.html
@@ -52,7 +52,7 @@
                                         {% elif media.mime.startswith('video/') %}
                                         <div class="media-thumb video-wrapper">
                                             <video controls class="media-thumb" preload="none"
-                                                {% if media.thumbnail %}poster="https://{{ media.thumbnail }}"{% endif %}>
+                                                {% if media.thumbnail_url %}poster="{{ media.thumbnail_url }}"{% endif %}>
                                                 <source src="{{ media.url }}" type="{{ media.mime }}">
                                             </video>
                                         </div>
