fixing VB issues and mobile grade badge issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@ body {
   font-weight: 700;
 }
 
-.grade-badge {
+.dashboard-climb-card .grade-badge {
   background: #007bff;
   color: white;
   padding: 2px 7px;
